# server/api/controllers/station/routes.js
@@ -5,6 +5,7 @@ import controller from './controller';
 export default express
   .Router()
   .get('/:state/:city', controller.getAllStations)
+  .get('/bookings', authHandler, controller.getStationBookings)
   .get('/:stationId', controller.getStationDetails)
   .put('/updateAddress', authHandler, controller.updateAddress)
   .post('/chargingPoints', authHandler, controller.addChargingPoints)
